2008-06-13  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stl/_iterator_base.h: Add a funny feature, when
	using both STLport and native STLs it was not possible
	to use std iterators in STLport containers because of the
	missing iterator category that is defined in std:: and
	not in stlport::. So now STLport map std iterator categories
	in stlport ones. Now it is possible to write something like
	that:
	std::string stdstr("std");
	stlport::string stlportstr("stlport and ");
	stlportstr.append(stdstr.begin(), stdstr.end());
	However the other side is not supported except when STLport
	iterators are simply pointers.

2008-06-05  Francois Dumont  <dums@users.sourceforge.net>

	* src/num_get_float.cpp: Remove useless skip of white
	space at begining of buffer in _Stl_string_to_double function.
	__read_float, the function that generate that buffer do not
	put white space at the first place.

	* stlport/stl/_new.h, _range_errors.c: Remove unused
	_STLP_RTTI_BUG macro. Moreover __stl_new was not correctly
	implemented with this macro, there was no check for failed
	allocation.
	
	* test/unit/limits_test.cpp: Remove code supposed to hide
	numeric_limits::max value to MSVC 8 compiler, this code was
	introducing a test regression. If it is producing a warning
	a #pragma warning should be use to hide it.

	* test/unit/num_put_get_test.cpp: Add test showing problem
	with code that used to be in limits test. Those tests will be
	activated for 5.3 to check that there is really nothing wrong
	with it.

2008-06-07  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* configure: don't duplicate options in config.mak, that
	has default values in makefiles.

2008-06-06  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* configure: put it on common place for ./configure;

	* build/Makefiles/gmake/targetdirs.mak: use $(DESTDIR)
	as in common practice (change root of installation, but
	don't change run paths);

	* build: by default use make for gcc;
