@@ -1,4 +1,4 @@
-# Time-stamp: <08/06/06 10:38:18 yeti>
+# Time-stamp: <08/06/12 14:28:42 ptr>
 #
 # Copyright (c) 2004-2008
 # Petr Ovtchenkov
@@ -11,11 +11,16 @@ SUBDIRS := build/lib
 
 include ${SRCROOT}/Makefiles/gmake/subdirs.mak
 
-all install depend clean clobber distclean check:
+all install depend clean clobber distclean check::
 	+$(call doinsubdirs,${SUBDIRS})
+
+distclean clean depend clobber::
+	+$(call doinsubdirs,build/test/unit)
 
 release-shared install-release-shared:
 	+$(call doinsubdirs,${SUBDIRS})
 
+install::
+	${MAKE} -C build/lib install-headers
 
 .PHONY: all install depend clean clobber distclean check release-shared install-release-shared
