@@ -1,6 +1,6 @@
-# -*- makefile -*- Time-stamp: <07/03/08 21:37:08 ptr>
+# -*- makefile -*- Time-stamp: <08/06/12 15:00:07 ptr>
 #
-# Copyright (c) 1997-1999, 2002, 2003, 2005-2007
+# Copyright (c) 1997-1999, 2002, 2003, 2005-2008
 # Petr Ovtchenkov
 #
 # Portion Copyright (c) 1999-2001
@@ -9,19 +9,11 @@
 # Licensed under the Academic Free License version 3.0
 #
 
-# Oh, the commented below work for gmake 3.78.1 and above,
-# but phrase without tag not work for it. Since gmake 3.79 
-# tag with assignment fail, but work assignment for all tags
-# (really that more correct).
-
 OPT += -KPIC
 
 ifeq ($(OSNAME),linux)
-dbg-shared:	LDFLAGS += -shared -Wl,-h$(SO_NAME_DBGxx) ${LDSEARCH}
-stldbg-shared:	LDFLAGS += -shared -Wl,-h$(SO_NAME_STLDBGxx) ${LDSEARCH}
-release-shared:	LDFLAGS += -shared -Wl,-h$(SO_NAMExx) ${LDSEARCH}
-dbg-static:	LDFLAGS += ${LDSEARCH}
-stldbg-static:	LDFLAGS += ${LDSEARCH}
-release-static:	LDFLAGS += ${LDSEARCH}
+dbg-shared:	LDFLAGS += -shared -Wl,-h$(SO_NAME_DBGxx)
+stldbg-shared:	LDFLAGS += -shared -Wl,-h$(SO_NAME_STLDBGxx)
+release-shared:	LDFLAGS += -shared -Wl,-h$(SO_NAMExx)
 endif
 
