@@ -1,23 +1,36 @@
-# -*- Makefile -*- Time-stamp: <04/03/14 18:55:49 ptr>
+# -*- Makefile -*- Time-stamp: <08/06/12 16:41:21 ptr>
 
 SRCROOT := ../..
 COMPILER_NAME := icc
+-include ${SRCROOT}/Makefiles/gmake/config.mak
+ALL_TAGS = release-shared check-release
+CHECK_TAGS = check-release
+ifndef WITHOUT_STLPORT
+ALL_TAGS += stldbg-shared check-stldbg
+CHECK_TAGS += check-stldbg
+endif
+STLPORT_DIR ?= ../../..
 
-ALL_TAGS := release-shared stldbg-shared
-STLPORT_DIR := ../../..
 include Makefile.inc
 include ${SRCROOT}/Makefiles/gmake/top.mak
 
+ifdef WITHOUT_STLPORT
+DEFS += -DWITHOUT_STLPORT
+endif
 
-INCLUDES += -I${STLPORT_INCLUDE_DIR}
+dbg-shared:	DEFS += -D_STLP_DEBUG_UNINITIALIZED
+ifndef WITHOUT_STLPORT
+stldbg-shared:	DEFS += -D_STLP_DEBUG_UNINITIALIZED
+endif
 
 ifdef STLP_BUILD_BOOST_PATH
 INCLUDES += -I${STLP_BUILD_BOOST_PATH}
 endif
 
-release-shared:	LDSEARCH = -L${STLPORT_LIB_DIR} -Wl,-R${STLPORT_LIB_DIR}
-stldbg-shared:	LDSEARCH = -L${STLPORT_LIB_DIR} -Wl,-R${STLPORT_LIB_DIR}
-dbg-shared:	LDSEARCH = -L${STLPORT_LIB_DIR} -Wl,-R${STLPORT_LIB_DIR}
+ifndef WITHOUT_STLPORT
+release-shared: LDFLAGS += -L${STLPORT_DIR}/build/lib/${OUTPUT_DIR} -Wl,-R${STLPORT_DIR}/build/lib/${OUTPUT_DIR}
+dbg-shared:	LDFLAGS += -L${STLPORT_DIR}/build/lib/${OUTPUT_DIR_DBG} -Wl,-R${STLPORT_DIR}/build/lib/${OUTPUT_DIR_DBG}
+stldbg-shared:	LDFLAGS += -L${STLPORT_DIR}/build/lib/${OUTPUT_DIR_STLDBG} -Wl,-R${STLPORT_DIR}/build/lib/${OUTPUT_DIR_STLDBG}
 
 ifeq ($(OSNAME),linux)
 ifeq ($(CXX_VERSION_MAJOR),8)
@@ -46,3 +59,16 @@ dbg-shared:	LDLIBS = -lpthread -lstlportg
 endif
 endif
 endif
+
+endif
+
+check-release:	release-shared
+	-${OUTPUT_DIR}/${PRGNAME}
+
+ifndef WITHOUT_STLPORT
+check-stldbg:	stldbg-shared
+	-${OUTPUT_DIR_STLDBG}/${PRGNAME}
+endif
+
+check:	${CHECK_TAGS}
+
